Leak the dock widget factories for now

For some reason, deleting these item causes crashes with certain
versions of sip. Probably because the order of destruction of
registries is undefined and can happen after Python is destroyed.

BUG:391992
(cherry picked from commit ddf8e6b7fee6afc0bf4e3e05f6ea7d3a7cc3e94b)