libs/flake/KoDockRegistry.cpp
@@ -31,7 +31,7 @@
 Q_GLOBAL_STATIC(KoDockRegistry, s_instance)
 
 KoDockRegistry::KoDockRegistry()
-  : d(0)
+    : d(0)
 {
 }
 
@@ -48,8 +48,10 @@ void KoDockRegistry::init()
 
 KoDockRegistry::~KoDockRegistry()
 {
-    qDeleteAll(doubleEntries());
-    qDeleteAll(values());
+    // XXX: Intentionally leak the dockwidget factories to work around, for now, a bug in SIP
+    //      See https://bugs.kde.org/show_bug.cgi?id=391992
+    //    qDeleteAll(doubleEntries());
+    //    qDeleteAll(values());
 }
 
 KoDockRegistry* KoDockRegistry::instance()
